Fixed text alignment in buttons

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -55,6 +55,7 @@ img {
 .mybtn {
     margin: 25px 0;
     padding: 25px;
+    text-align: center;
     font-size: 36px;
     width: 260px;
     border-radius: .25rem;
